# open-cowork

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEAM_PILOT_START.md  pyproject.toml
.agent-state/: continuity-2026-04-29-v0311-compact-handoff.md
.governance/: .gitignore  AGENTS.md  README.md  agent-entry.md  agent-playbook.md  current-state.md  evidence.yaml  ledger.yaml  open-cowork-skill.md  participants-matrix.md  participants.yaml  rules.yaml  state.yaml
.governance/reviews/: V035_V036_AUDIT_CONTEXT.md  V035_V036_AUDIT_FINDINGS.md
.governance/templates/: ROUND_CLOSE_REPORT_TEMPLATE.md
docs/: PERSONAL_AGENT_PILOT.md  QUICKSTART.md  README.md  agent-adoption.md  agent-playbook.md  agent-skill.md  getting-started.md  glossary.md  index.md
docs/archive/: README.md  index.md
docs/plans/: 01-execution-plan.md  02-boundary-and-product-shape-decision.md  05-milestone1-implementation-design-package.md  07-milestone2-runtime-status-and-timeline-design.md  08-milestone2-handoff-package-design.md  09-milestone2-handoff-package-implementation-plan.md  11-milestone2-owner-transfer-continuity-implementation-plan.md  12-milestone2-increment-package-design.md  15-milestone2-closeout-packet-implementation-plan.md  19-milestone2-sync-history-and-external-export-implementation-plan.md  20-milestone2-boundary-hardening-design.md  2026-04-26-v030-human-participation-candidate-input.md  2026-04-26-v030-human-participation-implementation-plan.md  21-milestone2-boundary-hardening-implementation-plan.md  22-milestone2-maintenance-status-hardening-design.md  25-milestone2-truth-source-artifact-boundary-implementation-plan.md  26-milestone2-archive-maintenance-consistency-design.md  27-milestone2-archive-maintenance-consistency-implementation-plan.md  28-milestone2-continuity-refs-consistency-design.md  29-milestone2-continuity-refs-consistency-implementation-plan.md  30-milestone2-archive-receipt-and-archived-refs-consistency-design.md  33-milestone2-sync-history-query-implementation-plan.md  37-milestone2-continuity-and-sync-digest-implementation-plan.md  38-milestone2-sync-history-summary-in-digest-design.md  39-milestone2-sync-history-summary-in-digest-implementation-plan.md  (+7 more)
docs/reports/: 01-status-report.md  (+18 more)
scripts/: bootstrap.sh  quickstart.sh  smoke-test.sh  update.sh
tests/: test_change_package.py  test_cli.py  test_continuity.py  test_contract.py  test_governance_index.py  test_hermes_recovery.py  test_retrospective.py  test_run.py  test_runtime_status.py  test_simple_yaml.py  test_state_consistency.py  test_step_matrix.py  test_v028.py  test_v029.py  test_v030.py  test_v031.py  test_v0311_gates.py  test_v0311_lean_state.py  test_v0311_migration.py  test_v0311_pressure.py  test_v032.py  test_v033.py  test_v034.py  test_v035.py  test_v036.py  test_v037.py  test_v038.py  test_v039.py
(+163 files in other folders)
