[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-cowork"
version = "0.2.5"
description = "Protocol-first framework for complex multi-person and multi-agent collaboration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "open-cowork contributors" }]
keywords = ["governance", "collaboration", "workflow", "multi-agent", "change-package"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
ocw = "governance.cli:main"
open-cowork = "governance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["governance*", "adapters*"]
