[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-cowork"
version = "0.2.8"
description = "Protocol-first framework for complex multi-person and multi-agent collaboration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "open-cowork contributors" }]
keywords = ["governance", "collaboration", "workflow", "multi-agent", "change-package"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
ocw = "governance.cli:main"
open-cowork = "governance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["governance*", "adapters*"]
